syntax = "proto3";

package user_stat_svc;

import "user-stat-svc/message.proto";

service UserStats {
    rpc Query(QueryRequest) returns (stream User) {}
    rpc RawQuery(RawQueryRequest) returns (stream User) {}
}
